client/src/templates/Challenges/fill-in-the-blank/show.css
.fill-in-the-blank-wrap {
  background-color: var(--primary-background);
  padding: 20px;
  border: 4px solid var(--tertiary-background);
  display: flex;
  align-items: start;
  justify-content: center;
  flex-direction: column;
  gap: 1em;
}

.fill-in-the-blank-wrap > p {
  margin: 0;
  font-size: 1.25em;
}

.fill-in-the-blank-input {
  padding: 0;
  text-align: center;
  background-color: var(--primary-background);
  border-radius: 0;
  overflow-wrap: anywhere;
  line-height: 1.5rem;
  z-index: 1;
  position: relative;
  border-left: none;
  border-right: none;
  border-top: none;
  border-bottom-width: 4px;
  border-bottom-color: var(--gray-45) !important;
}

.code-tag code {
  font-size: 100%;
  z-index: 0;
  position: relative;
}

.first-code-tag code {
  border-right: none;
}

.middle-code-tag code {
  border-left: none;
  border-right: none;
}

.last-code-tag code {
  border-left: none;
}

.green-underline {
  border-bottom-color: var(--success-background) !important;
}

.red-underline {
  border-bottom-color: var(--danger-background) !important;
}

